armado con animaciones

--- a/pages/nuestraspizzas.html
+++ b/pages/nuestraspizzas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Pizzeria La Barra/Nuestras Pizzas</title>
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
@@ -30,20 +31,20 @@
         </nav>
     </header>
     <main class="mainpizzas">
-        <nav class="flexpizzas">
-            <div class="tarjetapizza">
-                <a href>
+        <nav class="flexpizzas fade-right">
+            <div class="tarjetapizza ">
+                <a href> 
                     <img class="img" src="../Images/muzza.jpg" alt="muzzarella">
                 </a>
                 <p>La pizza de mozzarella es la más clásica entre todas las recetas de pizzas. Es la que nos gusta a la mayoría. Es una receta compuesta por una masa baja y crocante con una cubierta de salsa de tomate, mozzarella, aceitunas y orégano</p></p>
             </div>
-            <div class="tarjetapizza">
+            <div class="tarjetapizza fade-up">
                 <a href>
                     <img class="img" src="../Images/jamonymorron.jpg" alt="Jamon y morron">
                 </a>
                 <p>La pizza con jamon y morron es una de las más clásicas entre todas las recetas de pizzas. Es la que nos gusta a la mayoría. Es una receta compuesta por una masa baja y crocante con una cubierta de salsa de tomate, mozzarella, jamon, tiras de morron, aceitunas y orégano</p></p>
             </div>
-            <div class="tarjetapizza">
+            <div class="tarjetapizza fade-left">
                 <a href>
                     <img class="img"src="../Images/napo.jpg" alt="Napolitana">
                 </a>
@@ -67,6 +68,6 @@
             <img class="logo2" src="../Images/Logopizza.png"></a>
 
     </footer>    
-            
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>    
     </body>
     </html>
