--- a/pages/locales.html
+++ b/pages/locales.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Pizzeria La Barra/Locales</title>
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
@@ -98,6 +99,7 @@
         <a href>
             <img class="logo2" src="../Images/Logopizza.png"></a>
 
-    </footer>        
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>      
     </body>
     </html>
