--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Pizzeria La Barra/Reservas</title>
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
@@ -85,7 +86,7 @@
             <br>
             <label for="obs">OBSERVACIONES:</label>
             <br>
-            <textarea id="Obs" cols="50" rows="10"></textarea>
+            <textarea id="Obs" cols="40%" rows="20%"></textarea>
             <br>
             <input type="submit" value="SOLICITAR RESERVA">
             <input type="reset" value="RESETEAR">
@@ -107,6 +108,7 @@
         </div>
         <a href>
             <img class="logo2" src="../Images/Logopizza.png"></a>
-    </footer>    
+    </footer> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>   
     </body>
     </html>
