correcion img pizzas

--- a/pages/nuestraspizzas.html
+++ b/pages/nuestraspizzas.html
@@ -31,20 +31,20 @@
         </nav>
     </header>
     <main class="mainpizzas">
-        <nav class="flexpizzas fade-right">
+        <nav class="flexpizzas">
             <div class="tarjetapizza ">
                 <a href> 
                     <img class="img" src="../Images/muzza.jpg" alt="muzzarella">
                 </a>
                 <p>La pizza de mozzarella es la más clásica entre todas las recetas de pizzas. Es la que nos gusta a la mayoría. Es una receta compuesta por una masa baja y crocante con una cubierta de salsa de tomate, mozzarella, aceitunas y orégano</p></p>
             </div>
-            <div class="tarjetapizza fade-up">
+            <div class="tarjetapizza">
                 <a href>
                     <img class="img" src="../Images/jamonymorron.jpg" alt="Jamon y morron">
                 </a>
                 <p>La pizza con jamon y morron es una de las más clásicas entre todas las recetas de pizzas. Es la que nos gusta a la mayoría. Es una receta compuesta por una masa baja y crocante con una cubierta de salsa de tomate, mozzarella, jamon, tiras de morron, aceitunas y orégano</p></p>
             </div>
-            <div class="tarjetapizza fade-left">
+            <div class="tarjetapizza">
                 <a href>
                     <img class="img"src="../Images/napo.jpg" alt="Napolitana">
                 </a>
